fix(console): pagination bar should be fully visible

--- a/packages/console/src/pages/TenantSettings/TenantMembers/index.module.scss
+++ b/packages/console/src/pages/TenantSettings/TenantMembers/index.module.scss
@@ -53,7 +53,7 @@
   }
 }
 
-ul {
+.list {
   padding-inline-start: _.unit(6);
 
   > li {
